--- a/CANoe/1조.cfg
+++ b/CANoe/1조.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|16|0|38049 1Á¶ 
+;CANoe Version |4|16|0|54452 1Á¶ 
 Version: 16.7.5 Build 5
 32 PRO
 5
@@ -270,10 +270,19 @@ VCaplOptionsStreamer 3 Begin_Of_Object
 End_Of_Object VCaplOptionsStreamer 3
 VSVConfigurationStreamer 3 Begin_Of_Object
 1
-2378
+4416
 ï»¿<?xml version="1.0" encoding="utf-8"?>
 <systemvariables version="4">
   <namespace name="" comment="" interface="">
+    <namespace name="BMS" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="battery_charging_state" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
+        <valuetable name="On_Off" definesMinMax="true">
+          <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
+          <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
+          <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
+        </valuetable>
+      </variable>
+    </namespace>
     <namespace name="Transmission" comment="" interface="">
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="gear" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
@@ -286,6 +295,20 @@ VSVConfigurationStreamer 3 Begin_Of_Object
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_acceleration" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
     <namespace name="Light" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="fog_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
+        <valuetable name="On_Off" definesMinMax="true">
+          <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
+          <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
+          <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
+        </valuetable>
+      </variable>
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="light_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
+        <valuetable name="On_Off" definesMinMax="true">
+          <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
+          <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
+          <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
+        </valuetable>
+      </variable>
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="corner_light_left" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="corner_light_right" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
@@ -657,13 +680,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-31
+37
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-31
+37
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -776,7 +799,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 1 0 1 -1 -1 -1 -1 1367 0 1867 588
+0 0 0 1 -1 -1 -1 -1 1367 0 1867 588
 
 1
 
@@ -799,7 +822,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+0
 0
 0
 1
@@ -1401,7 +1424,7 @@ End_Of_Object VTraceFilterCfg 19
 6
 1
 18
-GFver=5;ver=5: FT TF TF FT FT FF FF FF FF TF;T F _Statistics;F T CANoe;F T Transmission;F T Motor;F T Steering;F T Light;F T _Security;F T Brake
+GFver=5;ver=5: FT TF TF FT FT FF FF FF FF TF;T F _Statistics;F T CANoe;F T BMS;F T Transmission;F T Motor;F T Steering;F T Light;F T _Security;F T Brake
 End_Of_Serialized_Data 18
 7
 0
@@ -3656,7 +3679,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 0
-31
+37
 1
 1
 0
@@ -4546,7 +4569,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-31
+37
 1
 1
 0
@@ -4883,7 +4906,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-31
+37
 1
 1
 0
@@ -5063,7 +5086,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-31
+37
 1
 1
 0
@@ -5254,7 +5277,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 0 0 1038 588
+0 2 0 1 -1 -1 -1 -1 0 0 1038 588
 
 1
 
@@ -5277,7 +5300,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+2
 0
 0
 1
@@ -5365,11 +5388,11 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-206
+207
 VDAOBus 4 Begin_Of_Object
 1
 1
-8
+9
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
 61
@@ -5460,11 +5483,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1444208366
+3849013896
 0
 NodeSignalPanelBustypeCount 0
 0
-1444208366
+3849013896
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -5563,11 +5586,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2972310842
+201537693
 0
 NodeSignalPanelBustypeCount 0
 0
-2972310842
+201537693
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -5769,11 +5792,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2972310842
+4200634298
 0
 NodeSignalPanelBustypeCount 0
 0
-2972310842
+4200634298
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -6078,7 +6101,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3661497158
+2190513915
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -6687,7 +6710,7 @@ mPatch
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 7
 0
-3661497158
+2190513915
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -6791,6 +6814,109 @@ End_Of_Object VSimulinkModelViewerConfiguration 7
 NodeSignalPanelBustypeCount 0
 0
 0
+0
+End_Of_Object VSimulationNode 6
+NULL
+
+EndOfComment
+0
+1
+End_Of_Object VDAOGBFunctionBlock 5
+VDAOGBFunctionBlock 5 Begin_Of_Object
+1
+207
+3
+TABPredecessor:
+79
+TABSuccessor:
+2
+VSimulationNode 6 Begin_Of_Object
+8
+VProgrammedNode 7 Begin_Of_Object
+7
+VConfigurationRoot 8 Begin_Of_Object
+1
+End_Of_Object VConfigurationRoot 8
+<VFileName V9 QL> 1 "abs_slave.can" 
+1
+C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe\abs_slave.cbf
+<< default >>
+
+5
+ABS_Slave
+ECU 17
+EOF_TITLE_INFO
+
+1
+0
+1
+1
+0
+1
+0
+1 2 2 0 
+SS_BEGIN_COMMON_INFO
+1
+0
+SS_END_COMMON_INFO
+
+EOF_MBSSDATA
+1
+2 1
+0
+EOF_NLDATA
+0
+EOF_ASSEMBLYDATA
+<VFileName V9 QL> 1 "abs_slave.cbf" 
+VIPBStackSetting 8 Begin_Of_Object
+7
+2
+0
+0
+1
+0
+1
+8
+0.0.0.0
+End_Of_Serialized_Data 8
+8
+::
+End_Of_Serialized_Data 8
+0
+1
+End_Of_Object VIPBStackSetting 8
+7
+NULL
+End_Of_Serialized_Data 7
+0
+<VFileName V9 QL> 0 "" 
+0
+0
+0
+End_Of_Object VProgrammedNode 7
+0
+0
+Startdelay 0 0 0
+Jitter 0 0 1 0 0 0 0
+0
+EOF_NLDATA
+3
+VSimulinkModelViewerConfiguration 7 Begin_Of_Object
+3
+<VFileName V9 QL> 0 "" 
+<VFileName V9 QL> 0 "" 
+<VFileName V9 QL> 0 "" 
+150
+0
+0
+End_Of_Object VSimulinkModelViewerConfiguration 7
+1
+0
+2189269879
+0
+NodeSignalPanelBustypeCount 0
+0
+2189269879
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -6998,11 +7124,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2400716248
+2036368181
 0
 NodeSignalPanelBustypeCount 0
 0
-2400716248
+2036368181
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7101,11 +7227,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3423580976
+1455425888
 0
 NodeSignalPanelBustypeCount 0
 0
-3423580976
+1455425888
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7533,7 +7659,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 TABPredecessor:
 78
 TABSuccessor:
-2
+207
 VSimulationNode 6 Begin_Of_Object
 8
 VProgrammedNode 7 Begin_Of_Object
@@ -7638,7 +7764,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 2
 0
 TABPredecessor:
-79
+207
 TABSuccessor:
 0
 VCardConf 6 Begin_Of_Object
@@ -7656,7 +7782,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 0 0 2882400001 860 1060 410 610 2882400002  2 0 12 1342394507216 1342385818256 1342392341712   3 
+1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 0 0 2882400001 860 1060 410 610 2882400002  6 0 15 140720151473784 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -7923,7 +8049,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -1 -1 -1 -1 452 128 1472 895
+22 2 3 -32000 -32000 -1 -1 452 128 1472 895
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -8177,7 +8303,151 @@ VScanBaudrateConfiguration 2 Begin_Of_Object
 1
 End_Of_Object VScanBaudrateConfiguration 2
 4
+4
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
 3
+1 1 0 1 -1 -1 -1 -1 1060 16 1801 396
+Drive
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 1060 16 1801 396
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+1
+1
+0 1 -1 -1 -1 -1 911 277 1652 657
+1
+1
+1920 504
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 0 0 0 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{B096CD8B-0460-4E23-B822-05B46AA6A324}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V9 QL> 1 "Panel\Drive.xvp" 
+1
+0
+7274563
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V9 QL> 1 "" 
+-1780500520
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
 VPanelBox 2 Begin_Of_Object
 2
 VUniqueBox 3 Begin_Of_Object
@@ -8314,7 +8584,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1780502760
+-1780500520
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -8329,7 +8599,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 2 0 1 -1 -1 -1 -1 256 13 1103 504
+1 1 0 1 -1 -1 -1 -1 164 30 1011 521
 Dashboard
 1
 
@@ -8349,13 +8619,13 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 256 13 1103 504
-6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+0 1 -1 -1 -1 -1 164 30 1011 521
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
 1
-0 1 -1 -1 -1 -1 804 189 1651 680
+1
+0 1 -1 -1 -1 -1 215 201 1062 692
 1
 1
 1920 504
@@ -8458,7 +8728,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1780502760
+-1780500520
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -8602,7 +8872,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1780502760
+-1780500520
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -10665,7 +10935,7 @@ _size
 1
 Int32
 _version
-153
+171
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -10963,7 +11233,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-31
+37
 1
 1
 0
