--- a/CANoe/1조.cfg
+++ b/CANoe/1조.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|16|0|54437 1Á¶ 
+;CANoe Version |4|16|0|38069 1Á¶ 
 Version: 16.7.5 Build 5
 32 PRO
 5
@@ -270,30 +270,26 @@ VCaplOptionsStreamer 3 Begin_Of_Object
 End_Of_Object VCaplOptionsStreamer 3
 VSVConfigurationStreamer 3 Begin_Of_Object
 1
-3684
+3615
 ï»¿<?xml version="1.0" encoding="utf-8"?>
 <systemvariables version="4">
   <namespace name="" comment="" interface="">
     <namespace name="Steering" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="adas_control_steering" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_steering" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
     <namespace name="Motor" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="adas_control_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_acceleration" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="lateral_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="longitudinal_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="lateral_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
     <namespace name="Transmission" comment="" interface="">
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="gear" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
     <namespace name="Light" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="fog_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2" />
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="light_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
-        <valuetable name="On_Off" definesMinMax="true">
-          <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
-          <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
-          <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
-        </valuetable>
-      </variable>
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="fog_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
         <valuetable name="On_Off" definesMinMax="true">
           <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
           <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
@@ -671,13 +667,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-56
+75
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-61
+80
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -712,7 +708,7 @@ End_Of_Object VAdditionalLicenseOptions 3
 End_Of_Object VGlobalParameters 2
 VDesktopManager 2 Begin_Of_Object
 1
-2
+3
 4
 VDesktop 3 Begin_Of_Object
 1
@@ -835,7 +831,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 0
@@ -1046,7 +1042,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 2 1 2 -576 991 -1 -1 0 0 521 400
+1 6 1 2 -576 991 -1 -1 0 0 521 400
 CAN Statistics
 1
 
@@ -1069,7 +1065,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+2
 0
 0
 1
@@ -1080,7 +1076,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+6
 0
 0
 1
@@ -1091,7 +1087,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-3
+6
 0
 0
 0
@@ -3437,7 +3433,7 @@ End_Of_Serialized_Data 18
 0
 0
 290
-1
+0
 356
 <VFileName V9 QL> 1 "..\..\..\Public\Documents\Vector\CANoe\16 (x64)\Templates\CANoe" 
 1
@@ -3451,7 +3447,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 5 0 1 -1 -1 -1 -1 0 4 1113 477
+1 3 0 1 -1 -1 -1 -1 12 4 975 493
 Trace
 1
 
@@ -3481,26 +3477,26 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 4 1113 477
+0 1 -1 -1 -1 -1 742 257 1848 730
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-5
+3
 0
 0
 1
 1920 783
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 12 4 1113 493
+0 1 -1 -1 -1 -1 12 4 975 493
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
+1
+3
 0
-4
 0
-0
-0
-0 0
+1
+1920 783
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -3573,7 +3569,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 1 0 1 -1 -1 -1 -1 56 4 573 269
+1 2 0 1 -1 -1 -1 -1 44 0 561 265
 Data
 1
 
@@ -3596,18 +3592,18 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 1
 1001 591
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 56 4 573 269
+0 1 -1 -1 -1 -1 44 0 561 265
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+2
 0
 0
 1
@@ -3618,7 +3614,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+2
 0
 0
 0
@@ -3670,7 +3666,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 1
-56
+75
 1
 1
 0
@@ -4103,7 +4099,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 3 0 1 -1 -1 -1 -1 451 4 2075 604
+1 4 0 1 -1 -1 -1 -1 451 4 2075 604
 Graphics
 1
 
@@ -4126,7 +4122,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-3
+6
 0
 0
 1
@@ -4137,7 +4133,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-3
+4
 0
 0
 1
@@ -4148,7 +4144,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+4
 0
 0
 0
@@ -4441,7 +4437,7 @@ End_Of_Object VSysVarObject 19
 control_steering
 "" 223 80 -40.328546 -39.158185 -100. 100. 2 0 0 0 576000000 0 1 0 0 
 [GraphWindow:x_x_x_x_x_x_WindowBk_Grid_AxisBk_XAxisFr_YAxisFr_x_x_x_x_x_x]
-572341.8496499999892 787581.52445999998599 215239.6748099999968 200000 576000000 1 ffffff b2b2b2 ffffff 0 0 0 0 1 1 1 0
+0 215239.6748099999968 215239.6748099999968 200000 576000000 1 ffffff b2b2b2 ffffff 0 0 0 0 1 1 1 0
 0 30 5000
 0
 0 100
@@ -4452,7 +4448,7 @@ control_steering
 0
 1
 41943040
-0
+3
 VLogExportPersister 19 Begin_Of_Object
 7
 1416
@@ -4588,7 +4584,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-56
+75
 1
 1
 0
@@ -4687,8 +4683,8 @@ End_Of_Object VLogCfgData 19
 0
 0
 1 13
-1 1 1 0 0 0 0 0 0 0 0 0 0 
-0 1 2 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 
+1 1 1 1 0 0 0 0 0 0 0 0 0 
+0 1 2 3 -1 -1 -1 -1 -1 -1 -1 -1 -1 
 27 33 130 55 55 55 55 55 57 57 82 40 82 
 391 80
 0
@@ -4925,7 +4921,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-56
+75
 1
 1
 0
@@ -5105,7 +5101,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-56
+75
 1
 1
 0
@@ -5341,7 +5337,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 0
@@ -6371,7 +6367,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2839738108
+2506720890
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -6980,7 +6976,7 @@ mPatch
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 7
 0
-2839738108
+2506720890
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7183,11 +7179,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1836266209
+630141378
 0
 NodeSignalPanelBustypeCount 0
 0
-1836266209
+630141378
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7760,11 +7756,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3359612712
+4157623193
 0
 NodeSignalPanelBustypeCount 0
 0
-3359612712
+4157623193
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -8212,7 +8208,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 1 0 59420 1 233 1 2882400001 53 286 261 734 2882400002  0 0 0 0 0 0 0 2882400001 860 1060 410 610 2882400002  6 0 44 2075075424496 2075075417552 2075067552776   3 
+1 1 0 59420 1 233 1 2882400001 53 286 261 734 2882400002  0 0 0 0 0 20 0 2882400001 860 1060 410 610 2882400002  6 0 44 0 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8224,7 +8220,7 @@ P-CAN
 1
 1
 1
-2075207873408 1 0 1 0 0 1 0 0 0 2000 1 
+0 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 2
@@ -8245,7 +8241,7 @@ Ethernet1
 11
 1
 1
-2075207868768 1 0 0 0 0 0 0 0 0 2000 1 
+0 1 0 0 0 0 0 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8262,7 +8258,7 @@ C-CAN
 1
 1
 2
-2075207871088 1 0 1 0 0 1 0 27 6 2000 1 
+0 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8279,7 +8275,7 @@ B-CAN
 1
 1
 3
-2075207861808 1 0 1 0 0 1 0 27 6 2000 1 
+0 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8296,7 +8292,7 @@ OTA-CAN
 1
 1
 4
-2075207875728 1 0 0 0 0 1 0 0 0 2000 1 
+0 1 0 0 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8313,7 +8309,7 @@ ADAS-CAN
 1
 1
 5
-2075207866448 1 0 1 0 0 1 0 0 0 2000 1 
+0 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8330,7 +8326,7 @@ OC-CAN
 1
 1
 6
-2075207878048 1 0 1 0 0 1 0 0 0 2000 1 
+0 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8353,7 +8349,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 4 0 1 -1 -1 -1 -1 0 335 934 778
+1 5 0 1 -1 -1 -1 -1 0 335 1038 778
 Write
 1
 
@@ -8376,18 +8372,18 @@ END_OF_DESKTOP_DATA
 6 1 0 0 0 0 0 0 423 189 0 0 1 36756 1904 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 1 0 0 0 1 275 0 59422 1 
 END_OF_DOCK_INFO
 1
-2
+5
 0
 0
 1
 1272 829
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 335 934 778
+0 1 -1 -1 -1 -1 0 335 1038 778
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-4
+5
 0
 0
 1
@@ -8398,7 +8394,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+5
 0
 0
 0
@@ -8471,7 +8467,7 @@ End_Of_Object VControlAdapter 4
 WListVer 2
 <VFileName V9 QL> 1 "..\..\..\Public\Documents\Vector\CANoe\Public\Documents\Vector\CANwin\8.0.71\CANwin Demos\templates" 
  0 1 1 1 1 0
- False 147 90 0 280 280 280 280
+ False 147 90 0 633 280 280 280
 End_Of_Serialized_Data 3
 End_Of_Object VWriteControlAdapter 3
 
@@ -8479,7 +8475,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -1 -1 -1 -1 -10000 -10000 -8980 -9233
+22 2 3 -32000 -32000 -1 -1 -10000 -10000 -8980 -9233
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -8741,7 +8737,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 -1 0 1 0 0 0 0 379 100 1520 404
+1 2 0 1 -1 -1 -1 -1 29 479 770 859
 Drive
 1
 
@@ -8765,7 +8761,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
--1
+7
 1
 0 1 -1 -1 -1 -1 1094 248 1835 628
 1
@@ -8773,28 +8769,28 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 0 741 380
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+0 2 0 749 -1 -1 166 177 907 557
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
--1
+7
 1
-0 1 -1 -1 -1 -1 1188 273 1929 653
+0 1 -1 -1 -1 -1 336 431 1077 811
 1
 1
-0 0
+1920 783
 END_OF_DESKTOP_DATA
 6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+0 1 -1 -1 -1 -1 29 479 770 859
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-0
--1
 1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
+2
+1
+0 1 -1 -1 -1 -1 2 29 743 409
+1
+1
+1920 783
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -8885,7 +8881,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 -1 0 1 0 0 0 0 379 115 1520 463
+1 1 0 1 -1 -1 -1 -1 992 318 1839 809
 Dashboard
 1
 
@@ -8909,7 +8905,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
--1
+3
 1
 0 2 -32000 -32000 -1 -1 804 189 1651 680
 1
@@ -8917,28 +8913,28 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 0 847 491
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+0 1 -1 -1 -1 -1 946 90 1793 581
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
--1
+1
 1
 0 1 -1 -1 -1 -1 1045 367 1892 858
 1
 1
-0 0
+1920 783
 END_OF_DESKTOP_DATA
 6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+0 1 -1 -1 -1 -1 992 318 1839 809
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-0
--1
 1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
+1
+1
+0 1 -1 -1 -1 -1 4 58 851 549
+1
+1
+1920 783
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -9029,7 +9025,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 -1 0 1 0 0 0 0 379 115 1520 463
+1 0 0 1 -1 -1 -1 -1 976 19 2016 351
 body
 1
 
@@ -9073,16 +9069,16 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+0 1 -1 -1 -1 -1 976 19 2016 351
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-0
--1
 1
-0 0 0 0 0 0 960 0 960 0
 0
-0
-0 0
+1
+0 1 -1 -1 -1 -1 744 240 1784 572
+1
+1
+1920 783
 END_OF_DESKTOP_DATA
 END_OF_DESKTOP_DATA_COLLECTION
 0
@@ -11365,7 +11361,7 @@ _size
 1
 Int32
 _version
-183
+211
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -11663,7 +11659,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-56
+75
 1
 1
 0
@@ -12178,22 +12174,22 @@ End_Of_Object VDocumentViewerWrapper 2
 SVDialogSettings
 VSVDialogSettings 2 Begin_Of_Object
 1
-527
-180
+402
+207
 930
 600
 1
 1
 0
 320
-440
+282
 -1
 6
 VColumnSettings 3 Begin_Of_Object
 1
 1
 0
-170
+192
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
@@ -12230,7 +12226,7 @@ VColumnSettings 3 Begin_Of_Object
 1
 1
 0
-238
+221
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
@@ -12242,7 +12238,7 @@ VColumnSettings 3 Begin_Of_Object
 1
 6
 2
-105
+77
 End_Of_Object VColumnSettings 3
 8
 VColumnSettings 3 Begin_Of_Object
