DCI-19-feat/CANoe_cgw_임시저장

--- a/CANoe/1조.cfg
+++ b/CANoe/1조.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|16|0|38069 1Á¶ 
+;CANoe Version |4|16|0|54433 1Á¶ 
 Version: 16.7.5 Build 5
 32 PRO
 5
@@ -667,13 +667,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-75
+79
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-80
+84
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -786,7 +786,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 1 0 1 -1 -1 -1 -1 1367 0 1867 588
+0 0 0 1 -1 -1 -1 -1 1367 0 1867 588
 
 1
 
@@ -809,7 +809,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+0
 0
 0
 1
@@ -831,7 +831,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 0
@@ -1042,7 +1042,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 6 1 2 -576 991 -1 -1 0 0 521 400
+1 5 1 2 -576 991 -1 -1 0 0 521 400
 CAN Statistics
 1
 
@@ -1065,7 +1065,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+5
 0
 0
 1
@@ -1076,7 +1076,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-6
+5
 0
 0
 1
@@ -1087,7 +1087,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-6
+5
 0
 0
 0
@@ -3447,7 +3447,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 3 0 1 -1 -1 -1 -1 12 4 975 493
+1 2 0 1 -1 -1 -1 -1 12 4 975 493
 Trace
 1
 
@@ -3470,7 +3470,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-4
+2
 0
 0
 0
@@ -3492,7 +3492,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-3
+2
 0
 0
 1
@@ -3592,7 +3592,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+2
 0
 0
 1
@@ -3666,7 +3666,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 1
-75
+79
 1
 1
 0
@@ -4099,7 +4099,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 4 0 1 -1 -1 -1 -1 451 4 2075 604
+1 7 0 1 -1 -1 -1 -1 451 4 2075 604
 Graphics
 1
 
@@ -4122,7 +4122,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-6
+7
 0
 0
 1
@@ -4133,7 +4133,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-4
+7
 0
 0
 1
@@ -4144,7 +4144,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-4
+7
 0
 0
 0
@@ -4584,7 +4584,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-75
+79
 1
 1
 0
@@ -4683,8 +4683,8 @@ End_Of_Object VLogCfgData 19
 0
 0
 1 13
-1 1 1 1 0 0 0 0 0 0 0 0 0 
-0 1 2 3 -1 -1 -1 -1 -1 -1 -1 -1 -1 
+1 1 1 0 0 0 0 0 0 0 0 0 0 
+0 1 2 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 
 27 33 130 55 55 55 55 55 57 57 82 40 82 
 391 80
 0
@@ -4921,7 +4921,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-75
+79
 1
 1
 0
@@ -5101,7 +5101,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-75
+79
 1
 1
 0
@@ -5292,7 +5292,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 44 44 975 557
+0 1 0 1 -1 -1 -1 -1 0 0 1038 588
 
 1
 
@@ -5315,7 +5315,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 0
 0
 1
@@ -5337,7 +5337,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 0
@@ -5732,16 +5732,16 @@ VProgrammedNode 7 Begin_Of_Object
 VConfigurationRoot 8 Begin_Of_Object
 1
 End_Of_Object VConfigurationRoot 8
-<VFileName V9 QL> 1 "" 
+<VFileName V9 QL> 1 "steering.can" 
 1
-C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe
+C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe\steering.cbf
 << default >>
 
 5
 Steering
 ECU 7
 EOF_TITLE_INFO
-
+<< default >>
 1
 0
 1
@@ -5762,7 +5762,7 @@ EOF_MBSSDATA
 EOF_NLDATA
 0
 EOF_ASSEMBLYDATA
-<VFileName V9 QL> 1 "" 
+<VFileName V9 QL> 1 "steering.cbf" 
 VIPBStackSetting 8 Begin_Of_Object
 7
 2
@@ -5807,11 +5807,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-0
+4200634298
 0
 NodeSignalPanelBustypeCount 0
 0
-0
+4200634298
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -6367,7 +6367,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2506720890
+3768050595
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -6976,7 +6976,7 @@ mPatch
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 7
 0
-2506720890
+3768050595
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7550,11 +7550,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2627113898
+3490289067
 0
 NodeSignalPanelBustypeCount 0
 0
-2627113898
+3490289067
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -8208,7 +8208,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 1 0 59420 1 233 1 2882400001 53 286 261 734 2882400002  0 0 0 0 0 20 0 2882400001 860 1060 410 610 2882400002  6 0 44 0 0 0   3 
+1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 20 0 2882400001 860 1060 410 610 2882400002  2 0 4 0 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8349,7 +8349,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 5 0 1 -1 -1 -1 -1 0 335 1038 778
+1 6 0 1 -1 -1 -1 -1 0 335 1038 778
 Write
 1
 
@@ -8372,7 +8372,7 @@ END_OF_DESKTOP_DATA
 6 1 0 0 0 0 0 0 423 189 0 0 1 36756 1904 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 1 0 0 0 1 275 0 59422 1 
 END_OF_DOCK_INFO
 1
-5
+6
 0
 0
 1
@@ -8383,7 +8383,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-5
+6
 0
 0
 1
@@ -8394,7 +8394,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-5
+6
 0
 0
 0
@@ -8475,7 +8475,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 -10000 -10000 -8980 -9233
+22 2 3 -32000 -32000 -1 -1 529 214 1549 981
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -8737,7 +8737,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 2 0 1 -1 -1 -1 -1 29 479 770 859
+1 3 0 1 -1 -1 -1 -1 29 479 770 859
 Drive
 1
 
@@ -8761,7 +8761,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-7
+3
 1
 0 1 -1 -1 -1 -1 1094 248 1835 628
 1
@@ -8773,7 +8773,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-7
+4
 1
 0 1 -1 -1 -1 -1 336 431 1077 811
 1
@@ -8785,7 +8785,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+3
 1
 0 1 -1 -1 -1 -1 2 29 743 409
 1
@@ -8881,7 +8881,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 992 318 1839 809
+1 0 0 1 -1 -1 -1 -1 992 318 1839 809
 Dashboard
 1
 
@@ -8905,7 +8905,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-3
+0
 1
 0 2 -32000 -32000 -1 -1 804 189 1651 680
 1
@@ -8929,7 +8929,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+0
 1
 0 1 -1 -1 -1 -1 4 58 851 549
 1
@@ -9025,7 +9025,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 976 19 2016 351
+1 1 0 1 -1 -1 -1 -1 976 19 2016 351
 body
 1
 
@@ -9049,7 +9049,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
--1
+1
 1
 0 2 -32000 -32000 -1 -1 870 348 1910 680
 1
@@ -9061,7 +9061,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
--1
+0
 1
 0 0 0 0 0 0 960 0 960 0
 0
@@ -9073,7 +9073,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 1
 0 1 -1 -1 -1 -1 744 240 1784 572
 1
@@ -11361,7 +11361,7 @@ _size
 1
 Int32
 _version
-211
+219
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -11659,7 +11659,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-75
+79
 1
 1
 0
