DCI-19-feat/CANoe_중간통합

--- a/CANoe/1조.cfg
+++ b/CANoe/1조.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|16|0|54433 1Á¶ 
+;CANoe Version |4|16|0|54449 1Á¶ 
 Version: 16.7.5 Build 5
 32 PRO
 5
@@ -274,31 +274,6 @@ VSVConfigurationStreamer 3 Begin_Of_Object
 ï»¿<?xml version="1.0" encoding="utf-8"?>
 <systemvariables version="4">
   <namespace name="" comment="" interface="">
-    <namespace name="Steering" comment="" interface="">
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="adas_control_steering" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_steering" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-    </namespace>
-    <namespace name="Motor" comment="" interface="">
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="adas_control_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_acceleration" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="longitudinal_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="lateral_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-    </namespace>
-    <namespace name="Transmission" comment="" interface="">
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="gear" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-    </namespace>
-    <namespace name="Light" comment="" interface="">
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="fog_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="light_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
-        <valuetable name="On_Off" definesMinMax="true">
-          <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
-          <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
-          <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
-        </valuetable>
-      </variable>
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="corner_light_right" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="corner_light_left" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
-    </namespace>
     <namespace name="Brake" comment="" interface="">
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="brake_pressed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
         <valuetable name="On_Off" definesMinMax="true">
@@ -307,6 +282,31 @@ VSVConfigurationStreamer 3 Begin_Of_Object
           <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
         </valuetable>
       </variable>
+    </namespace>
+    <namespace name="Light" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="corner_light_left" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="corner_light_right" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="light_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2">
+        <valuetable name="On_Off" definesMinMax="true">
+          <valuetableentry value="0" lowerBound="0" upperBound="0" description="Off" displayString="Off" />
+          <valuetableentry value="1" lowerBound="1" upperBound="1" description="On" displayString="On" />
+          <valuetableentry value="2" lowerBound="2" upperBound="2" description="Invalid" displayString="Invalid" />
+        </valuetable>
+      </variable>
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="fog_active" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" minValue="0" minValuePhys="0" maxValue="2" maxValuePhys="2" />
+    </namespace>
+    <namespace name="Transmission" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="gear" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+    </namespace>
+    <namespace name="Motor" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="lateral_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="longitudinal_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_acceleration" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="adas_control_speed" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+    </namespace>
+    <namespace name="Steering" comment="" interface="">
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="control_steering" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="adas_control_steering" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" />
     </namespace>
   </namespace>
 </systemvariables>
@@ -667,13 +667,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-79
+91
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-84
+96
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -708,7 +708,7 @@ End_Of_Object VAdditionalLicenseOptions 3
 End_Of_Object VGlobalParameters 2
 VDesktopManager 2 Begin_Of_Object
 1
-3
+1
 4
 VDesktop 3 Begin_Of_Object
 1
@@ -831,7 +831,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 0
@@ -1183,46 +1183,10 @@ ArrayElement
 65536
 UInt64
 ArrayElement
-65545
-UInt64
-ArrayElement
-196619
-UInt64
-ArrayElement
-196613
-UInt64
-ArrayElement
-65548
-UInt64
-ArrayElement
-196623
-UInt64
-ArrayElement
-65550
-UInt64
-ArrayElement
-65537
-UInt64
-ArrayElement
-196618
-UInt64
-ArrayElement
-65540
-UInt64
-ArrayElement
-196624
-UInt64
-ArrayElement
-196621
-UInt64
-ArrayElement
-18
-UInt64
-ArrayElement
-17
-UInt64
-ArrayElement
 65542
+UInt64
+ArrayElement
+65544
 UInt64
 ArrayElement
 196611
@@ -1231,10 +1195,46 @@ ArrayElement
 65543
 UInt64
 ArrayElement
-196611
+196619
 UInt64
 ArrayElement
-65544
+65545
+UInt64
+ArrayElement
+65548
+UInt64
+ArrayElement
+196613
+UInt64
+ArrayElement
+65550
+UInt64
+ArrayElement
+196623
+UInt64
+ArrayElement
+196618
+UInt64
+ArrayElement
+18
+UInt64
+ArrayElement
+17
+UInt64
+ArrayElement
+65537
+UInt64
+ArrayElement
+196624
+UInt64
+ArrayElement
+65540
+UInt64
+ArrayElement
+196621
+UInt64
+ArrayElement
+196611
 UInt64
 ArrayElement
 131071
@@ -1411,7 +1411,7 @@ End_Of_Object VTraceFilterCfg 19
 6
 1
 18
-GFver=5;ver=5: FT TF TF FT FT FF FF FF FF TF;T F _Statistics;F T CANoe;F T Motor;F T Steering;F T Transmission;F T Light;F T _Security;F T Brake
+GFver=5;ver=5: FT TF TF FT FT FF FF FF FF TF;T F _Statistics;F T CANoe;F T _Security;F T Brake;F T Light;F T Transmission;F T Steering;F T Motor
 End_Of_Serialized_Data 18
 7
 0
@@ -3666,7 +3666,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 1
-79
+91
 1
 1
 0
@@ -4435,7 +4435,7 @@ End_Of_Serialized_Data 19
 End_Of_Object VSysVarObject 19
 [MeasurementObject]
 control_steering
-"" 223 80 -40.328546 -39.158185 -100. 100. 2 0 0 0 576000000 0 1 0 0 
+"" 223 80 -40.328545 -39.158184 -100. 100. 2 0 0 0 576000000 0 1 0 0 
 [GraphWindow:x_x_x_x_x_x_WindowBk_Grid_AxisBk_XAxisFr_YAxisFr_x_x_x_x_x_x]
 0 215239.6748099999968 215239.6748099999968 200000 576000000 1 ffffff b2b2b2 ffffff 0 0 0 0 1 1 1 0
 0 30 5000
@@ -4495,37 +4495,9 @@ End_Of_Object VLogExportPersister 19
 391
 0
 0
+0
 1
-129
 0
-0
--12
-0
-0
-0
-0
-0
-0
-0
-400
-0
-Gulim
-1
-1
-129
-0
-0
--12
-0
-0
-0
-34
-0
-0
-0
-400
-0
-Gulim
 0
 1
 1
@@ -4584,7 +4556,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-79
+91
 1
 1
 0
@@ -4921,7 +4893,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-79
+91
 1
 1
 0
@@ -5101,7 +5073,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-79
+91
 1
 1
 0
@@ -5337,7 +5309,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 0
@@ -5403,11 +5375,11 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-260
+279
 VDAOBus 4 Begin_Of_Object
 1
 1
-8
+9
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
 61
@@ -5629,16 +5601,16 @@ VProgrammedNode 7 Begin_Of_Object
 VConfigurationRoot 8 Begin_Of_Object
 1
 End_Of_Object VConfigurationRoot 8
-<VFileName V9 QL> 1 "" 
+<VFileName V9 QL> 1 "brake.can" 
 1
-C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe
+C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe\brake.cbf
 << default >>
 
 5
 Brake
 ECU 5
 EOF_TITLE_INFO
-
+<< default >>
 1
 0
 1
@@ -5659,7 +5631,7 @@ EOF_MBSSDATA
 EOF_NLDATA
 0
 EOF_ASSEMBLYDATA
-<VFileName V9 QL> 1 "" 
+<VFileName V9 QL> 1 "brake.cbf" 
 VIPBStackSetting 8 Begin_Of_Object
 7
 2
@@ -5704,11 +5676,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-0
+2357589176
 0
 NodeSignalPanelBustypeCount 0
 0
-0
+2357589176
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7088,6 +7060,109 @@ EndOfComment
 0
 1
 End_Of_Object VDAOGBFunctionBlock 5
+VDAOGBFunctionBlock 5 Begin_Of_Object
+1
+279
+3
+TABPredecessor:
+79
+TABSuccessor:
+2
+VSimulationNode 6 Begin_Of_Object
+8
+VProgrammedNode 7 Begin_Of_Object
+7
+VConfigurationRoot 8 Begin_Of_Object
+1
+End_Of_Object VConfigurationRoot 8
+<VFileName V9 QL> 1 "abs_slave.can" 
+1
+C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe\abs_slave.cbf
+<< default >>
+
+5
+ABS_Slave
+ECU 17
+EOF_TITLE_INFO
+
+1
+0
+1
+1
+0
+1
+0
+1 2 2 0 
+SS_BEGIN_COMMON_INFO
+1
+0
+SS_END_COMMON_INFO
+
+EOF_MBSSDATA
+1
+2 1
+0
+EOF_NLDATA
+0
+EOF_ASSEMBLYDATA
+<VFileName V9 QL> 1 "abs_slave.cbf" 
+VIPBStackSetting 8 Begin_Of_Object
+7
+2
+0
+0
+1
+0
+1
+8
+0.0.0.0
+End_Of_Serialized_Data 8
+8
+::
+End_Of_Serialized_Data 8
+0
+1
+End_Of_Object VIPBStackSetting 8
+7
+NULL
+End_Of_Serialized_Data 7
+0
+<VFileName V9 QL> 0 "" 
+0
+0
+0
+End_Of_Object VProgrammedNode 7
+0
+0
+Startdelay 0 0 0
+Jitter 0 0 1 0 0 0 0
+0
+EOF_NLDATA
+3
+VSimulinkModelViewerConfiguration 7 Begin_Of_Object
+3
+<VFileName V9 QL> 0 "" 
+<VFileName V9 QL> 0 "" 
+<VFileName V9 QL> 0 "" 
+150
+0
+0
+End_Of_Object VSimulinkModelViewerConfiguration 7
+1
+0
+2057071084
+0
+NodeSignalPanelBustypeCount 0
+0
+2057071084
+0
+End_Of_Object VSimulationNode 6
+NULL
+
+EndOfComment
+0
+1
+End_Of_Object VDAOGBFunctionBlock 5
 8
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
@@ -7550,11 +7625,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3490289067
+276435899
 0
 NodeSignalPanelBustypeCount 0
 0
-3490289067
+276435899
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -7578,9 +7653,9 @@ VProgrammedNode 7 Begin_Of_Object
 VConfigurationRoot 8 Begin_Of_Object
 1
 End_Of_Object VConfigurationRoot 8
-<VFileName V9 QL> 1 "" 
+<VFileName V9 QL> 1 "abs.can" 
 1
-C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe
+C:\Users\USER\Desktop\DrivingConvenienceIntegration\CANoe\abs.cbf
 << default >>
 
 5
@@ -7608,7 +7683,7 @@ EOF_MBSSDATA
 EOF_NLDATA
 0
 EOF_ASSEMBLYDATA
-<VFileName V9 QL> 1 "" 
+<VFileName V9 QL> 1 "abs.cbf" 
 VIPBStackSetting 8 Begin_Of_Object
 7
 2
@@ -7653,11 +7728,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-0
+1023854028
 0
 NodeSignalPanelBustypeCount 0
 0
-0
+1023854028
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -8085,7 +8160,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 TABPredecessor:
 78
 TABSuccessor:
-2
+279
 VSimulationNode 6 Begin_Of_Object
 8
 VProgrammedNode 7 Begin_Of_Object
@@ -8190,7 +8265,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 2
 0
 TABPredecessor:
-79
+279
 TABSuccessor:
 0
 VCardConf 6 Begin_Of_Object
@@ -8208,7 +8283,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 20 0 2882400001 860 1060 410 610 2882400002  2 0 4 0 0 0   3 
+1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 0 0 2882400001 860 1060 410 610 2882400002  2 0 0 0 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8220,7 +8295,7 @@ P-CAN
 1
 1
 1
-0 1 0 1 0 0 1 0 0 0 2000 1 
+2709291579312 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 2
@@ -8241,7 +8316,7 @@ Ethernet1
 11
 1
 1
-0 1 0 0 0 0 0 0 0 0 2000 1 
+2709291586272 1 0 0 0 0 0 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8258,7 +8333,7 @@ C-CAN
 1
 1
 2
-0 1 0 1 0 0 1 0 0 0 2000 1 
+2709291588592 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8275,7 +8350,7 @@ B-CAN
 1
 1
 3
-0 1 0 1 0 0 1 0 0 0 2000 1 
+2709291583952 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8292,7 +8367,7 @@ OTA-CAN
 1
 1
 4
-0 1 0 0 0 0 1 0 0 0 2000 1 
+2709291590912 1 0 0 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8309,7 +8384,7 @@ ADAS-CAN
 1
 1
 5
-0 1 0 1 0 0 1 0 0 0 2000 1 
+2709291576992 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8326,7 +8401,7 @@ OC-CAN
 1
 1
 6
-0 1 0 1 0 0 1 0 0 0 2000 1 
+2709291597872 1 0 1 0 0 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8475,7 +8550,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 529 214 1549 981
+22 2 3 -1 -1 -1 -1 -10000 -10000 -8980 -9233
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -8866,7 +8941,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1583368648
+1323283912
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -8881,7 +8956,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 992 318 1839 809
+1 1 0 1 -1 -1 -1 -1 992 318 1839 809
 Dashboard
 1
 
@@ -8905,7 +8980,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 1
 0 2 -32000 -32000 -1 -1 804 189 1651 680
 1
@@ -8929,7 +9004,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 1
 0 1 -1 -1 -1 -1 4 58 851 549
 1
@@ -9010,7 +9085,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1583368648
+1323283912
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -9025,7 +9100,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 976 19 2016 351
+1 0 0 1 -1 -1 -1 -1 976 19 2016 351
 body
 1
 
@@ -9049,7 +9124,7 @@ END_OF_DESKTOP_DATA
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 1
 0 2 -32000 -32000 -1 -1 870 348 1910 680
 1
@@ -9073,7 +9148,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+0
 1
 0 1 -1 -1 -1 -1 744 240 1784 572
 1
@@ -9154,7 +9229,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1583368648
+1323283912
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -9298,7 +9373,7 @@ VPanelActiveX 5 Begin_Of_Object
 4294967295
 0
 <VFileName V9 QL> 1 "" 
--1583368648
+1323283912
 End_Of_Object VPanelActiveX 5
 End_Of_Object VPanelInfo 4
 1
@@ -11361,7 +11436,7 @@ _size
 1
 Int32
 _version
-219
+247
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -11428,7 +11503,7 @@ _size
 9
 Int32
 _version
-138
+148
 --TextFormatter: End of Object--
 TypeRef:10
 13
@@ -11659,7 +11734,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-79
+91
 1
 1
 0
@@ -13357,7 +13432,7 @@ OverallModel
 <LogFileMergeMode>ByMeasurementTime</LogFileMergeMode>
 <RootGroup xmlns="" i:type="RootGroup">
 <OfflineSources xmlns:d4p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
-<Id>847f63ef-928f-43e3-ada3-68de7e8d8a23</Id>
+<Id>b2ac8b81-2f6a-4247-b636-6edcc5cb5028</Id>
 <UserOffset>0</UserOffset>
 <MergeMode>0</MergeMode>
 <ChannelMappingSetId i:nil="true" />
