--- a/CANoe/1조.cfg
+++ b/CANoe/1조.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|16|0|38065 1Á¶ 
+;CANoe Version |4|16|0|54433 1Á¶ 
 Version: 16.7.5 Build 5
 32 PRO
 5
@@ -696,13 +696,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-101
+104
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-106
+109
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -815,7 +815,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 1367 0 1867 588
+0 1 0 1 -1 -1 -1 -1 1367 0 1867 588
 
 1
 
@@ -838,7 +838,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 0
 0
 1
@@ -1453,7 +1453,7 @@ End_Of_Serialized_Data 18
 11
 1
 18
-ver=5: FT FT FT FT
+ver=5: FF FT FT FT
 End_Of_Serialized_Data 18
 12
 0
@@ -1479,10 +1479,7 @@ End_Of_Serialized_Data 18
 ver=5: FT FT FT FT FT
 End_Of_Serialized_Data 18
 22
-1
-18
-ver=5: FT
-End_Of_Serialized_Data 18
+0
 23
 0
 24
@@ -3458,11 +3455,11 @@ Trace-Fenster
 End_Of_Object VLogExportPersister 19
 
 End_Of_Serialized_Data 18
-2
+1
 0
 0
 290
-0
+1
 356
 <VFileName V9 QL> 1 "..\..\..\Public\Documents\Vector\CANoe\16 (x64)\Templates\CANoe" 
 1
@@ -3476,7 +3473,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 2 0 1 -1 -1 -1 -1 12 4 975 493
+1 2 0 1 -1 -1 -9 -38 938 0 1520 294
 Trace
 1
 
@@ -3495,15 +3492,15 @@ END_OF_DOCK_INFO
 1920 783
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 431 301 1013 595
+0 1 -1 -1 -9 -38 938 0 1520 294
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-0
+1
 2
 0
 0
-0
-0 0
+1
+1920 504
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 742 257 1848 730
@@ -3695,7 +3692,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 1
-101
+104
 1
 1
 0
@@ -4585,7 +4582,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-101
+104
 1
 1
 0
@@ -4922,7 +4919,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-101
+104
 1
 1
 0
@@ -5102,7 +5099,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-101
+104
 1
 1
 0
@@ -5293,7 +5290,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 2 0 1 -1 -1 -1 -1 0 0 1038 588
+0 0 0 1 -1 -1 -1 -1 0 0 1038 588
 
 1
 
@@ -5316,7 +5313,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+0
 0
 0
 1
@@ -7697,11 +7694,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1370618520
+183065993
 0
 NodeSignalPanelBustypeCount 0
 0
-1370618520
+183065993
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -8460,11 +8457,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3097388378
+408865731
 0
 NodeSignalPanelBustypeCount 0
 0
-3097388378
+408865731
 0
 End_Of_Object VSimulationNode 6
 NULL
@@ -8500,7 +8497,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 0 0 2882400001 860 1060 410 610 2882400002  1 0 42 1706475836640 1706475342800 1706467117592   3 
+1 1 0 59420 1 233 1 2882400001 9 242 217 765 2882400002  0 0 0 0 0 0 0 2882400001 860 1060 410 610 2882400002  1 0 42 0 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -8767,7 +8764,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -1 -1 -1 -1 -10000 -10000 -8980 -9233
+22 2 3 -32000 -32000 -1 -1 -10000 -10000 -8980 -9233
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -9605,7 +9602,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 0 0 741 380
+1 3 0 1 -1 -1 -1 -1 107 27 848 407
 User
 1
 
@@ -9625,11 +9622,11 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 0 741 380
+0 1 -1 -1 -1 -1 107 27 848 407
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+3
 1
 0 1 -1 -1 -1 -1 87 81 828 461
 1
@@ -11797,7 +11794,7 @@ _size
 1
 Int32
 _version
-281
+287
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -12095,7 +12092,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-101
+104
 1
 1
 0
